--- a/sample_app/templates/sample_app/includes/add-sample-class-app/template.html
+++ b/sample_app/templates/sample_app/includes/add-sample-class-app/template.html
@@ -1,26 +1,26 @@
-<div id="accordion-add-course" class="rtl text-right farsi">
-  <div class="card" id="add-course-app">
+<div id="accordion-add-sample-class" class="rtl text-right farsi">
+  <div class="card" id="add-sample-class-app">
     <div class="card-header">
       <h5 class="text-center">
         <button
           class="btn btn-link"
           data-toggle="collapse"
-          data-target="#collapse-add-course"
+          data-target="#collapse-add-sample-class"
           aria-expanded="true"
-          aria-controls="collapse-add-course"
+          aria-controls="collapse-add-sample-class"
         >
-          افزودن واحد درسی
+          افزودن کلاس نمونه
         </button>
       </h5>
     </div>
     <div
-      id="collapse-add-course"
+      id="collapse-add-sample-class"
       class="collapse "
-      aria-labelledby="heading-add-course"
-      data-parent="#accordion-add-course"
+      aria-labelledby="heading-add-sample-class"
+      data-parent="#accordion-add-sample-class"
     >
       <div class="card-body">
-        <form @submit.prevent="add_course()">
+        <form @submit.prevent="add_sample_class()">
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
