--- a/sample_app/templates/sample_app/index.html
+++ b/sample_app/templates/sample_app/index.html
@@ -4,14 +4,14 @@
 {% block content %}
 <div class="row rtl farsi">
   <div class="col-6 col-md-3 col-lg-2 text-center my-3">
-    <a href="{% url 'sample_app:taxes' %}">
+    <a href="{% url 'sample_app:sample_classes' %}">
       <img
         src="{% static 'sample_app/img/logo.png' %}"
         width="64em"
         class="mb-2"
         alt=""
       />
-      <h6 class="text-center">مالیات ها</h6>
+      <h6 class="text-center">کلاس های نمونه</h6>
     </a>
   </div>
  
