--- a/sample_app/templates/sample_app/includes/add-sample-class-app/script.html
+++ b/sample_app/templates/sample_app/includes/add-sample-class-app/script.html
@@ -3,7 +3,9 @@
   let add_sample_class_app = new Vue({
     el: "#add-sample-class-app",
     data: {
-    title: "", 
+      title: "", 
+      message:{show:false,},
+      waiting:false,
     },
 
     components: {
@@ -24,10 +26,15 @@
         posting.done((data) => {
           console.log(data);
           if (data.result === "SUCCEED") {
+            show_message(add_sample_class_app,'موفق',data.message,'success',3000)
             add_sample_class_app.title=''
             if (typeof sample_classes_app != "undefined") {
               sample_classes_app.sample_classs.push(data.sample_class);
             }
+          }
+          else{
+            show_message(add_sample_class_app,'خطا',data.message,'danger',3000)
+
           }
         });
       },
