--- a/sample_app/templates/sample_app/includes/add-sample-class-app/template.html
+++ b/sample_app/templates/sample_app/includes/add-sample-class-app/template.html
@@ -15,7 +15,7 @@
     </div>
     <div
       id="collapse-add-sample-class"
-      class="collapse "
+      class="collapse"
       aria-labelledby="heading-add-sample-class"
       data-parent="#accordion-add-sample-class"
     >
@@ -29,10 +29,28 @@
               </div>
             </div>
             <div class="col-md-12">
-              <button class="btn btn-success" type="submit">
+              <button v-if="!waiting" class="btn btn-success" type="submit">
                 <i class="fa fa-plus"></i>
                 افزودن
               </button>
+              {% load static %}
+              <img
+                src="{% static 'leo/img/loading.gif' %}"
+                width="32"
+                v-if="waiting"
+                alt=""
+              />
+            </div>
+
+            <div class="col-md-12">
+              <div>
+                <div v-if="message.show" class="my-2">
+                  <div :class="'alert alert-'+message.color">
+                    <h5 v-html="message.title"></h5>
+                    <div v-html="message.body"></div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </form>
