--- a/school/templates/school/course.html
+++ b/school/templates/school/course.html
@@ -1,30 +1,38 @@
 {% extends "school/layout.html" %} {% load static %} {% block content %}
 <div class="row rtl farsi">
-  <div class="card">
-    <div class="card-body">
-      {{course.title}} {% if perms.school.change_course %}
-      <a
-        href="{{course.get_edit_url}}"
-        class="my-2 text-warning mx-2"
-        title="ویرایش"
-        target="_blank"
-      >
-        <i class="fa fa-edit text-warning"></i>
-        ویرایش
-      </a>
-      {% endif %} {% if perms.school.delete_course %}
+  <div class="col-md-12">
+    <div class="card">
+      <div class="card-body">
+        {{course.title}} {% if perms.school.change_course %}
+        <a
+          href="{{course.get_edit_url}}"
+          class="my-2 text-warning mx-2"
+          title="ویرایش"
+          target="_blank"
+        >
+          <i class="fa fa-edit text-warning"></i>
+          ویرایش
+        </a>
+        {% endif %} {% if perms.school.delete_course %}
 
-      <a
-        href="{{course.get_delete_url}}"
-        class="my-2 text-danger mx-2"
-        title="حذف"
-        target="_blank"
-      >
-        <i class="fa fa-trash text-danger"></i>
-        حذف
-      </a>
-      {% endif %}
+        <a
+          href="{{course.get_delete_url}}"
+          class="my-2 text-danger mx-2"
+          title="حذف"
+          target="_blank"
+        >
+          <i class="fa fa-trash text-danger"></i>
+          حذف
+        </a>
+        {% endif %}
+      </div>
     </div>
+  </div>
+  <div class="col-md-12"> 
+
+        
+        {% include "library/includes/books-app/template.html" %}
+     
   </div>
 </div>
 {% endblock content %} {% block script %}
@@ -33,4 +41,6 @@
   console.log("name2: {{name2}}");
   console.log("name3: {{name3}}");
 </script>
+        {% include "library/includes/books-app/script.html" %}
+
 {% endblock script %}
