--- a/sample_app/templates/sample_app/includes/add-sample-class-app/script.html
+++ b/sample_app/templates/sample_app/includes/add-sample-class-app/script.html
@@ -29,7 +29,7 @@
             show_message(add_sample_class_app,'موفق',data.message,'success',3000)
             add_sample_class_app.title=''
             if (typeof sample_classes_app != "undefined") {
-              sample_classes_app.sample_classs.push(data.sample_class);
+              sample_classes_app.sample_classes.push(data.sample_class);
             }
           }
           else{
