--- a/sample_app/templates/sample_app/includes/sample-classes-app/script.html
+++ b/sample_app/templates/sample_app/includes/sample-classes-app/script.html
@@ -1,10 +1,10 @@
 <script>
     
-    let sample_classs_for_sample_classs_app=JSON.parse("{{sample_classs_s|escapejs}}")
-    let sample_classs_app = new Vue({
+    let sample_classes_for_sample_classes_app=JSON.parse("{{sample_classes_s|escapejs}}")
+    let sample_classes_app = new Vue({
         el: "#sample-classes-app",
         data: {
-            sample_classs: sample_classs_for_sample_classs_app
+            sample_classes: sample_classes_for_sample_classes_app
         },
         methods: {
             to_price: function(vall) { 
