some bugs fixed

--- a/accounting/templates/accounting/includes/account-app/script.html
+++ b/accounting/templates/accounting/includes/account-app/script.html
@@ -11,7 +11,6 @@
         data:{
             show_code_copied: false,
             show_balance_copied: false,
-
         },
         methods:{
             copy_code:function(){
@@ -40,6 +39,7 @@
     let account_balance_app=new Vue({
         el:"#account-balance-app",
         data:{
+            show_balance_copied:false
         },
         methods:{
             copy_balance:function(){
