--- a/accounting/templates/accounting/includes/add-invoice-line-app/template.html
+++ b/accounting/templates/accounting/includes/add-invoice-line-app/template.html
@@ -147,7 +147,7 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for=""> ضریب </label>
-                <input max="100" min="0" v-model="coef" type="number" class="form-control" />
+                <input  min="0" v-model="coef" type="number" class="form-control" />
               </div>
             </div>
             <div class="col-md-4">
@@ -171,7 +171,7 @@
             </div>
 
              <div class="col-md-12">
-              <span v-text="to_price(unit_price)+'*'+quantity+'='+to_price(unit_price*quantity*(100-discount_percentage))"></span>
+              <span v-text="to_price(unit_price)+'*'+quantity+'='+to_price(unit_price*quantity*(100-discount_percentage)/100)"></span>
 
               {{CURRENCY}}
             </div>
