--- a/accounting/templates/accounting/person-account.html
+++ b/accounting/templates/accounting/person-account.html
@@ -26,7 +26,11 @@
         {% include "accounting/includes/financial-events-app/template.html" %}
     </div>
 
-    
+    <div class="col-md-12">
+        {% include "core/includes/page-description-app/short-description.html" %}
+        {% include "core/includes/page-description-app/description.html" %}
+     
+    </div> 
 
     <div class="col-md-12">
         {% include "accounting/includes/financial-document-lines-app/template.html" %}
