--- a/accounting/templates/accounting/includes/account-app/card-full.html
+++ b/accounting/templates/accounting/includes/account-app/card-full.html
@@ -14,7 +14,7 @@
             {{account.parent_account.get_breadcrumb_link|safe}}
         </div>
         {% endif %}
-        <div class="mt-2" id="account-code-app">
+        <div class="mt-2" id="account-code-app" vcloack>
             <h5 class="ltr" @click="copy_code()" style="cursor: pointer;">
                 <span class="ltr">
                     {{account.code | account_code_seperator}}
