--- a/projectmanager/templates/projectmanager/includes/remote-clients-app/add-remote-client-form.html
+++ b/projectmanager/templates/projectmanager/includes/remote-clients-app/add-remote-client-form.html
@@ -106,7 +106,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="">any_desk_password</label>
-                    <input type="text" class="form-control" v-model="any_desk_password">
+                    <input type="password" class="form-control" v-model="any_desk_password">
                 </div>
             </div>
 
@@ -131,7 +131,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="">dorsan_desk_password</label>
-                    <input type="text" class="form-control" v-model="dorsan_desk_password">
+                    <input type="password" class="form-control" v-model="dorsan_desk_password">
                 </div>
             </div>
 
@@ -155,7 +155,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="">password</label>
-                    <input type="text" class="form-control" v-model="password">
+                    <input type="password" class="form-control" v-model="password">
                 </div>
             </div>
 
@@ -322,7 +322,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="">adsl_password</label>
-                    <input type="text" class="form-control" v-model="adsl_password">
+                    <input type="password" class="form-control" v-model="adsl_password">
                 </div>
             </div>
 
