--- a/attachments/templates/attachments/includes/comments-app/list.html
+++ b/attachments/templates/attachments/includes/comments-app/list.html
@@ -6,7 +6,7 @@
             <h5 class="text-center">
                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapse-comments"
                     aria-expanded="true" aria-controls="collapse-comments">
-                    نظرات
+                    کامنت ها
                     <span>
                         <small class="text-danger mx-2">
                             <span>{{comments|length}}</span>
