--- a/attachments/templates/attachments/includes/comments-app/script.html
+++ b/attachments/templates/attachments/includes/comments-app/script.html
@@ -6,13 +6,39 @@
     let url_delete_comment = "{% url 'attachments:delete_comment' %}"
     let comments = JSON.parse(`{{comments_s|escapejs}}`)
     let comment_component_template=`{% include 'attachments/includes/comments-app/component.html' %}`
+    let root_comments = comments.filter(comment=>comment.reply_to_id==null)
+    
     let comment_component = Vue.component('comment-component', {
         data: function () {
             return {
                 confirm_delete: false,
+                show_add_reply:false,
+                reply:'',
             }
         },
         methods: {
+            clear_reply:function(){
+                this.reply=''
+            },
+            add_reply:function(){
+                let payload={
+                    csrfmiddlewaretoken:csrfmiddlewaretoken,
+                    parent_id:parseInt(this.comment.id),
+                    comment:this.reply,
+                    page_id: page_id,
+                }
+                console.log(payload) 
+                let comment=this.comment
+                let posting = $.post(url_add_comment, payload)
+                posting.done((data) => {
+                    console.log(data)
+                    if (data.result === 'SUCCEED') {
+
+                        comment.childs.push(data.comment) 
+                    }
+                })
+
+            },
             delete_comment: function (comment_id) {
                 this.confirm_delete = false
 
@@ -22,12 +48,18 @@
                     csrfmiddlewaretoken: csrfmiddlewaretoken
                 }
                 let posting = $.post(url, payload)
+                
                 posting.done(function (data) {
                     console.log(data)
                     if (data.result === 'SUCCEED') {
                         comments_app.comments = comments_app.comments.filter((comment) => {
                             return (comment.id != comment_id)
                         })
+
+                         comments_app.root_comments = comments_app.root_comments.filter((comment) => {
+                            return (comment.id != comment_id)
+                        })
+
                         comment_component.confirm_delete = false
                     }
                 })
@@ -47,13 +79,14 @@
         },
         data: {
             comment: "",
-            comments: comments,
+            root_comments: root_comments,
+            comments:comments,
+
             message: { show: false },
             waiting: false,
         },
         methods: {
-            add_comment: function () {
-                let url = url_add_comment
+            add_comment: function () { 
                 this.comment = $("#comment_inputed").val()
                 let payload = {
                     csrfmiddlewaretoken: csrfmiddlewaretoken,
@@ -64,11 +97,12 @@
                     show_message(comments_app,"خطا","متن وارد شده باید کمتر از 500 کاراکتر داشته باشد.","danger",5000)
                     return
                 }
-                let posting = $.post(url, payload)
+                let posting = $.post(url_add_comment, payload)
                 posting.done((data) => {
                     console.log(data)
                     if (data.result === 'SUCCEED') {
 
+                        comments_app.root_comments.push(data.comment)
                         comments_app.comments.push(data.comment)
                         comments_app.comment = ""
                     }
