--- a/projectmanager/templates/projectmanager/includes/add-invoice-app/script.html
+++ b/projectmanager/templates/projectmanager/includes/add-invoice-app/script.html
@@ -46,6 +46,8 @@
         let bes = add_invoice_app.bestankar;
         add_invoice_app.bedehkar = bes;
         add_invoice_app.bestankar = bed;
+        add_invoice_app.bedehkar_code = bes.code;
+        add_invoice_app.bestankar_code = bed.code;
       },
       to_price_colored: function (vall) {
         let colorr = "primary";
