--- a/projectmanager/templates/projectmanager/includes/project-app/script.html
+++ b/projectmanager/templates/projectmanager/includes/project-app/script.html
@@ -16,10 +16,10 @@
     $(document).ready(()=>{
         
         if(typeof add_invoice_app != 'undefined'){
-            add_invoice_app.bestankar_code= "{{project.employer.person_account.code}}"
-            add_invoice_app.bestankar = {code:"{{project.employer.person_account.code}}",id:parseInt("{{project.employer.person_account.id}}"),get_absolute_url:"{{project.employer.person_account.get_absolute_url}}",color:"{{project.employer.person_account.color}}",balance:to_price_colored("{{project.employer.person_account.balance}}"),name:"{{project.employer.person_account.name}}",thumbnail:"{{project.employer.person_account.thumbnail}}"}
-            add_invoice_app.bedehkar_code= "{{project.contractor.person_account.code}}"
-            add_invoice_app.bedehkar = {code:"{{project.employer.person_account.code}}",id:parseInt("{{project.employer.person_account.id}}"),get_absolute_url:"{{project.contractor.person_account.get_absolute_url}}",color:"{{project.contractor.person_account.color}}",balance:to_price_colored("{{project.contractor.person_account.balance}}"),name:"{{project.contractor.person_account.name}}",thumbnail:"{{project.contractor.person_account.thumbnail}}"}
+            add_invoice_app.bedehkar_code= "{{project.employer.person_account.code}}"
+            add_invoice_app.bedehkar = {code:"{{project.employer.person_account.code}}",id:parseInt("{{project.employer.person_account.id}}"),get_absolute_url:"{{project.employer.person_account.get_absolute_url}}",color:"{{project.employer.person_account.color}}",balance:to_price_colored("{{project.employer.person_account.balance}}"),name:"{{project.employer.person_account.name}}",thumbnail:"{{project.employer.person_account.thumbnail}}"}
+            add_invoice_app.bestankar_code= "{{project.contractor.person_account.code}}"
+            add_invoice_app.bestankar = {code:"{{project.contractor.person_account.code}}",id:parseInt("{{project.contractor.person_account.id}}"),get_absolute_url:"{{project.contractor.person_account.get_absolute_url}}",color:"{{project.contractor.person_account.color}}",balance:to_price_colored("{{project.contractor.person_account.balance}}"),name:"{{project.contractor.person_account.name}}",thumbnail:"{{project.contractor.person_account.thumbnail}}"}
         }
     })
 </script>
