some bugs fixed

--- a/accounting/templates/accounting/includes/invoice-line-item-units-app/template.html
+++ b/accounting/templates/accounting/includes/invoice-line-item-units-app/template.html
@@ -62,6 +62,7 @@
               <th>قیمت واحد</th>
               <th>تاریخ</th>
               <th>ضریب</th>
+              <th>قیمت جزء</th>
               <th>درصد</th>
               <th></th>
             </thead>
@@ -118,11 +119,15 @@
                 </td>
                 <td>
                   <span v-text="invoice_line_item_unit.coef"> </span>
-               *
+               
+                </td>
+                <td>
+                  
                   <span
                     v-text="to_price(invoice_line_item_unit.unit_price/invoice_line_item_unit.coef)"
                   >
                   </span>
+                 
                 </td>
                 <td>
                   <div v-html="invoice_line_item_unit.percentage_tag">
