--- a/projectmanager/templates/projectmanager/index.html
+++ b/projectmanager/templates/projectmanager/index.html
@@ -15,6 +15,19 @@
     </a>
   </div>
 
+  <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+    <a href="{% url 'projectmanager:tickets' %}">
+      <img
+        src="{% static 'chef/img/logo.png' %}"
+        width="64em"
+        class="mb-2"
+        alt=""
+      />
+      <h6 class="text-center">تیکت ها</h6>
+    </a>
+  </div>
+
+
 
 
 
