--- a/projectmanager/templates/projectmanager/includes/tickets-app/template.html
+++ b/projectmanager/templates/projectmanager/includes/tickets-app/template.html
@@ -24,6 +24,7 @@
 
               <th>پروژه</th> 
               <th>شخص</th>  
+              <th>تاریخ</th>  
               <th></th>
             </thead>
             <tbody>
@@ -63,6 +64,10 @@
                   <div v-for="person in [ticket.person]">
                      {% include "authentication/includes/person-app/media.html" %}
                   </div>
+                </td>
+
+                  <td>
+                   <span v-text="ticket.persian_datetime_added"></span>
                 </td>
 
                
