--- a/projectmanager/templates/projectmanager/includes/add-ticket-app/template.html
+++ b/projectmanager/templates/projectmanager/includes/add-ticket-app/template.html
@@ -30,6 +30,43 @@
               </div>
             </div>
             <div class="col-12"></div>
+
+             <div class="col-md-4">
+              <div class="form-group">
+                <label for="">شناسه شخص</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  @input="select_person()"
+                  v-model="person_id"
+                />
+              </div>
+            </div>
+
+            <div class="col-md-8">
+              <div class="form-group" v-if="person.full_name">
+                    <label for="" class="text-success">شخص انتخاب شده</label>
+
+                <a :href="person.get_absolute_url">
+                  <div class="media">
+                    <img :src="person.image" width="64" alt="" />
+                    <div class="media-body mr-2">
+                      <h5>
+                        <span v-text="person.full_name"></span>
+                      </h5>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div v-else>
+                <div class="form-group">
+                    <label for="" class="text-danger">خطا</label>
+                    <div class="alert alert-danger">شخص انتخاب نشده است.</div>
+                </div>
+              </div>
+            </div>
+
+
             <div class="col-md-4">
               <div class="form-group">
                 <label for="exampleInputDate">تاریخ</label>
@@ -96,55 +133,8 @@
               </div>
             </div>
 
-            <div class="col-md-4">
-              <div class="form-group">
-                <label for="exampleInputDate">پیمانکار</label>
-
-                <select
-                  type="text"
-                  required
-                  class="form-control"
-                  v-model="contractor_id"
-                >
-                  <option
-                    v-for="organization in organizations"
-                    :value="organization.id"
-                    v-text="organization.title"
-                  ></option>
-                </select>
-              </div>
-            </div>
-
-            <div class="col-md-4">
-              <div class="form-group">
-                <label for="exampleInputDate">کارفرما</label>
-
-                <select
-                  type="text"
-                  required
-                  class="form-control"
-                  v-model="employer_id"
-                >
-                  <option
-                    v-for="organization in organizations"
-                    :value="organization.id"
-                    v-text="organization.title"
-                  ></option>
-                </select>
-              </div>
-            </div>
-
-            <div class="col-md-4">
-              <div class="form-group">
-                <label for="exampleInputDate">&nbsp;</label>
-
-                <a
-                  href="{% url 'organization:organization_units' %}"
-                  target="_blank"
-                  >لیست سازمان ها</a
-                >
-              </div>
-            </div>
+            
+ 
 
             <div class="col-md-12">
               <div v-if="message.show">
