--- a/accounting/templates/accounting/includes/edit-invoice-app/template.html
+++ b/accounting/templates/accounting/includes/edit-invoice-app/template.html
@@ -31,11 +31,11 @@
           </div>
           <div class="col-md-4">
             <div class="form-group">
-              <label for="">درصد تخفیف</label>
+              <label for=""> تخفیف</label>
               <input
                 type="number"
                 class="form-control"
-                v-model="discount_percentage"
+                v-model="discount"
               />
             </div>
           </div>
