--- a/accounting/templates/accounting/includes/add-financial-document-line-app/script.html
+++ b/accounting/templates/accounting/includes/add-financial-document-line-app/script.html
@@ -6,7 +6,7 @@
 
 
 <script>
-let financial_document_for_add_financial_document_line_app={id:0,title:''}
+let financial_document_for_add_financial_document_line_app={id:0,title:'سند بی نام'}
 let financial_event_for_add_financial_document_line_app={id:0,title:''}
 let account_for_add_financial_document_line_app={code:'0'}
 </script>
@@ -32,7 +32,7 @@ let account_for_add_financial_document_line_app={code:'0'}
     let add_financial_document_line_app = new Vue({
         el: "#add-financial-document-line-app",
         data: {
-            title: "",
+            title:"",
             date_time: current_date,
             bedehkar: 0,
             bestankar: 0,
