--- a/accounting/templates/accounting/includes/account-app/card.html
+++ b/accounting/templates/accounting/includes/account-app/card.html
@@ -1,4 +1,5 @@
-{% load static %} {% load to_price %} {% load to_persian_date %} {% load account_code_seperator %} {% load to_price_color_btn %}
+{% load static %} {% load to_price %} {% load to_persian_date %} {% load account_code_seperator %}
+ {% load to_price_color_btn %}
 <div class="card rtl text-right" id="account-app">
   <div class="card-header">
     <h5 class="text-center">حساب</h5>
@@ -16,13 +17,15 @@
     <a href="{{account.get_absolute_url}}">
       <div class="text-center">
         <img width="128" src="{{account.get_qrcode_url}}" alt="" />
-        <h5 class="text-center text-{{account.color}}">{{account.id}}</h5>
       </div>
     </a>
     <div>
       <div class="text-center">
-      <div class="my-2">
-          <button @click="copy_code()" class="my-2 btn btn-{{account.color}}">
+        <div class="my-2">
+          <button
+            @click="copy_to_clipboard({{account.code}})"
+            class="my-2 btn btn-{{account.color}}"
+          >
             <small class=""> کد : </small>
             {{account.code}}
             <i class="fa fa-copy"></i>
@@ -35,7 +38,7 @@
     <div>
       <div class="text-center">
         <button
-          @click="copy_balance()"
+          @click="copy_balance_to_clipboard('{{account.balance}}')"
           class="my-2 btn btn-{{account.balance_color}}"
         >
           <small class=""> مانده : </small>
@@ -56,22 +59,43 @@
       <small class="text-muted"> مانده : </small>
       {{account.balance|to_price_color|safe}} {{CURRENCY}}
     </h5>
- <div class="my-2">
-            <a href="{% url 'accounting:tree_chart' pk=account.id %}" target="_blank">
-                <img src="{% static 'accounting/img/tree-chart.png' %}" width="32" alt="">
-                نمودار درختی</a>
-        </div>
-     <div>
-            {% if perms.accounting.change_account %}
-            <a href="{{account.get_edit_url}}" class="my-2 text-warning mx-2" title="ویرایش" target="_blank">
-                <i class="fa fa-edit text-warning"></i> ویرایش
-            </a>
-            {% endif %}
-            {% if perms.accounting.delete_account %}
-            <a href="{{account.get_delete_url}}" class="my-2 text-danger mx-2" title="حذف" target="_blank">
-                <i class="fa fa-trash text-danger"></i> حذف
-            </a>
-            {% endif %}
-        </div>
+    <div class="my-2">
+      <a href="{% url 'accounting:tree_chart' pk=account.id %}" target="_blank">
+        <img
+          src="{% static 'accounting/img/tree-chart.png' %}"
+          width="32"
+          alt=""
+        />
+        نمودار درختی</a
+      >
+    </div>
+    <div>
+      <div class="text-center">
+        <small class="text-muted"> شناسه : </small>
+        <a href="{{account.get_absolute_url}}">
+          <span class=" text-{{account.color}}">{{account.id}}</span>
+        </a>
+      </div>
+
+      {% if perms.accounting.change_account %}
+      <a
+        href="{{account.get_edit_url}}"
+        class="my-2 text-warning mx-2"
+        title="ویرایش"
+        target="_blank"
+      >
+        <i class="fa fa-edit text-warning"></i> ویرایش
+      </a>
+      {% endif %} {% if perms.accounting.delete_account %}
+      <a
+        href="{{account.get_delete_url}}"
+        class="my-2 text-danger mx-2"
+        title="حذف"
+        target="_blank"
+      >
+        <i class="fa fa-trash text-danger"></i> حذف
+      </a>
+      {% endif %}
+    </div>
   </div>
 </div>
