--- a/accounting/templates/accounting/includes/invoices-app/script.html
+++ b/accounting/templates/accounting/includes/invoices-app/script.html
@@ -9,6 +9,12 @@
 
         },
         methods: {
+            
+      copy_to_clipboard:function(code){
+                navigator.clipboard.writeText(code);
+                 
+            },
+
             filter: function () {
                 this.invoices = invoices_app_invoices.filter(function (invoice) {
 
@@ -22,8 +28,13 @@
 
                 })
             },
+            to_price_colored: function (vall) {
+                let CURRENCY="{{CURRENCY}}"
+                return to_price_colored(vall, CURRENCY)
+            },
             to_price: function (vall) {
-                return to_price(vall, " ")
+                let CURRENCY="{{CURRENCY}}"
+                return to_price(vall, CURRENCY)
             },
 
         }
