--- a/school/templates/school/includes/add-school-app/template.html
+++ b/school/templates/school/includes/add-school-app/template.html
@@ -88,6 +88,9 @@
                   </a>
                   <div v-if="!person_account.id">
                     <h5 class="text-danger">حساب انتخاب نشده است.</h5>
+                    <div> 
+                      <a target="_blank" href="{% url 'accounting:person_accounts' %}">همه حساب های اشخاص</a>
+                    </div>
                   </div>
                 </div>
               </div>
