--- a/accounting/templates/accounting/includes/add-brand-app/script.html
+++ b/accounting/templates/accounting/includes/add-brand-app/script.html
@@ -1,39 +1,6 @@
-<script>
-    let add_brand_app = new Vue({
-        el: "#add-brand-app",
-        data: {
-            name: "",
-            show_form: false,
-            message: { show: false },
-        },
-        methods: {
-            add_brand: function () {
-                let payload = {
-                    csrfmiddlewaretoken: csrfmiddlewaretoken,
-                    name: this.name,
-                }
-                console.log(payload)
-                let url = "{% url 'accounting:add_brand' %}"
-                let posting = $.post(url, payload)
-                posting.done(data => {
-                    
-                    if (data.result === "SUCCEED") {
-                        if (typeof brands_app != "undefined") {
-                            brands_app.brands.push(data.brand)
-                        }
-                        show_message(add_brand_app, "موفقیت آمیز", data.message, "success", 5000)
-                    }
+ {% load static %}
+ <script>
+    let url_add_brand="{% url 'accounting:add_brand' %}"
+ </script>
+<script src="{% static 'accounting/js/add-brand-app/script.js' %}"></script>
 
-
-                    if (data.result != "SUCCEED") {
-                        show_message(add_brand_app, "خطا", data.message, "danger", 5000)
-                    }
-
-                })
-            },
-            to_price: function (vall) {
-                return to_price(vall)
-            }
-        }
-    })
-</script>
