--- a/accounting/templates/accounting/includes/brands-app/script.html
+++ b/accounting/templates/accounting/includes/brands-app/script.html
@@ -1,27 +1,8 @@
-<script>
-    let brands_for_brands_app = JSON.parse("{{brands_s|escapejs}}")
-    let brands_app_data = {
-        brands: brands_for_brands_app,
-        
-    }
-    let brands_app_methods = {}
-</script>
-<script>
-    brands_app_methods.filter= function () {
-        brands_app.brands=brands_for_brands_app.filter(brand=>brand.name.toUpperCase().indexOf(brands_app.search_for.toUpperCase())>-1)
-    }
-    
-</script> 
  
+{% load static %}
 <script>
-    let brands_app = new Vue({
-        el: "#brands-app",
-        data: {
-            brands: brands_for_brands_app,
-            search_for: "",
-        waiting: false,
-        message: { show: false },
-        },
-        methods: brands_app_methods,
-    })
+
+    let brands_for_brands_app = JSON.parse("{{brands_s|escapejs}}")
 </script>
+
+<script src="{% static 'accounting/js/brands-app/script.js' %}"></script>
